--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,3 @@
 @import "./variable.scss";
+@import "./override-style.scss";
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&family=Yellowtail&display=swap");
